@@ -47,6 +47,7 @@ General Fixes:
 - Player now needs to talk to Thofeistos before next stage of Urs' quest is triggered
 - removed effect of Ghost of Shadow Warrior
 - talking to Patient after Endres quest was closed doesn't add new log entry anymore
+- Collecting Soja plants works now
 
 
 
